K8s/Ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-svc-home
  labels:
    app: my-svc-home
    env: devops
spec:
  selector:
    app: cbz-home
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata: 
  name: my-svc-mobile
  labels:
    app: my-svc-mobile
    env: devops
spec:
  selector:
    app: cbz-mobile
  ports: 
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
