K8s/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    nginx.ingress.kuburnetes.io/rewrite-target: /
spec:
  rules:
  - host: cbz.com 
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-svc-home
            port:
              number: 80
  - host: mobile.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-svc-mobile            
            port:
              number: 80
